--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-#roboto{
 
-}
 
 
 #turma{
@@ -27,6 +25,12 @@ div{
 
 
 
+a{
+    text-decoration: none;
+    color: red;
+}
+
+
 #simulado{
     justify-content: left;
     
@@ -35,7 +39,7 @@ div{
     font-size: 8vw;
     font-family: 'Lato', sans-serif;
     color: black;
-    text-shadow: rgb(236, 100, 9) 1px  1px  1px;
+    text-shadow: rgb(236, 100, 9) 1.5px  1.5px  1.6px;
     background-color: rgb(253, 229, 11);
 }
 
@@ -44,10 +48,10 @@ body{
     
     
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 250vw;
     justify-content: center;
     align-items: center;
-    background-color: rgb(49, 46, 46);
+    background-color: rgb(5, 5, 5);
     margin: 0%;
     padding: 10px;
 
